--- a/app/views/partials/signup.html
+++ b/app/views/partials/signup.html
@@ -1,65 +1,90 @@
-<div ng-include="'partials/navbar.html'"></div>
+
 
 <div class="row">
-  <div class="col-sm-12">
+  <div class="full">
     <h1>Sign up</h1>
   </div>
-  <div class="col-sm-12">
-    <form class="form" name="form" ng-submit="register(form)" novalidate>
+  <pre>{{user | json}}</pre>
+  <form class="form" name="form" ng-submit="register(form)" novalidate>
 
-      <div class="form-group" ng-class="{ 'has-success': form.name.$valid && submitted,
-                                          'has-error': form.name.$invalid && submitted }">
-        <label>Name</label>
+    <div class="full" ng-class="{ 'has-success': form.name.$valid && submitted,
+                                        'has-error': form.name.$invalid && submitted }">
+      <label class="above-field">Name</label>
 
-        <input type="text" name="name" class="form-control" ng-model="user.name"
-               required/>
-        <p class="help-block" ng-show="form.name.$error.required && submitted">
-          A name is required
-        </p>
-      </div>   
+      <input type="text" name="name" class="field" ng-model="user.name"
+             required/>
+      <p class="help-text" ng-show="form.name.$error.required && submitted">
+        A name is required
+      </p>
+    </div>   
 
-      <div class="form-group" ng-class="{ 'has-success': form.email.$valid && submitted,
-                                          'has-error': form.email.$invalid && submitted }">
-        <label>Email</label>
+    <div class="full">
+      <label class="above-field">Organization Name (optional)</label>
+      <input type="text" name="name" class="field" ng-model="user.organizationName"/>
+    </div>   
 
-        <input type="email" name="email" class="form-control" ng-model="user.email"
-               required
-               mongoose-error/>
-        <p class="help-block" ng-show="form.email.$error.email && submitted">
-          Doesn't look like a valid email.
-        </p>
-        <p class="help-block" ng-show="form.email.$error.required && submitted">
-          What's your email address?
-        </p>
-        <p class="help-block" ng-show="form.email.$error.mongoose">
-          {{ errors.email }}
-        </p>
-      </div>
+    <div class="full">
+      <label class="above-field">Phone</label>
+      <input type="tel" name="phone" class="field" ng-model="user.phone"/>
+      <p class="help-text" ng-show="form.phone.$error.required && submitted">
+        A phone # is required
+      </p>
+    </div>
 
-      <div class="form-group" ng-class="{ 'has-success': form.password.$valid && submitted,
-                                          'has-error': form.password.$invalid && submitted }">
-        <label>Password</label>
-        
-        <input type="password" name="password" class="form-control" ng-model="user.password"
-               ng-minlength="3"
-               required
-               mongoose-error/>
-        <p class="help-block"
-           ng-show="(form.password.$error.minlength || form.password.$error.required) && submitted">
-          Password must be at least 3 characters.
-        </p>
-        <p class="help-block" ng-show="form.password.$error.mongoose">
-          {{ errors.password }}
-        </p>
-      </div>
+    <div class="full">
+      <label class="above-field">Address</label>
+      <input type="tel" name="name" class="field" ng-autocomplete ng-model="autocomplete" options="{type: 'geocode'}" details="autocompleteDetail"/>
+      <p class="help-text" ng-show="form.address.$error.required && submitted">
+        An address is required
+      </p>
+    </div>
 
-      <button class="btn btn-lg btn-primary" type="submit">Sign up</button>
-    </form>
-  </div>
+    <div class="full" ng-class="{ 'has-success': form.email.$valid && submitted,
+                                        'has-error': form.email.$invalid && submitted }">
+      <label class="above-field">Email</label>
+
+      <input type="email" name="email" class="field" ng-model="user.email"
+             required
+             mongoose-error/>
+      <p class="help-text" ng-show="form.email.$error.email && submitted">
+        Doesn't look like a valid email.
+      </p>
+      <p class="help-text" ng-show="form.email.$error.mongoose">
+        {{ errors.email }}
+      </p>
+    </div>
+
+    <div class="full" ng-class="{ 'has-success': form.password.$valid && submitted,
+                                        'has-error': form.password.$invalid && submitted }">
+      <label class="above-field">Password</label>
+      
+      <input type="password" name="password" class="field" ng-model="user.password"
+             ng-minlength="3"
+             required
+             mongoose-error/>
+      <p class="help-text"
+         ng-show="(form.password.$error.minlength || form.password.$error.required) && submitted">
+        Password must be at least 3 characters.
+      </p>
+      <p class="help-text" ng-show="form.password.$error.mongoose">
+        {{ errors.password }}
+      </p>
+    </div>
+    <div class="full">
+      <label class="above-field">Please check any options that apply to you</label>
+
+      <label ng-repeat="role in roles">
+          <input type="checkbox" checklist-model="user.roleTags" checklist-value="role.id"> {{role.text}}
+        </label>
+
+    </div>
+
+    <button class="btn btn-lg btn-primary" type="submit">Sign up</button>
+  </form>
 </div>
 
 <div class="row">
-  <div class="col-sm-12">
+  <div class="full-sm-12">
     <hr>
     Have an account? <a href="/login" class="text-center new-account">Log in.</a>
   </div>
