User can view and update task info

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -77,6 +77,8 @@
         <script src="scripts/controllers/tasks.js"></script>
         <script src="scripts/controllers/new_task.js"></script>
         <script src="scripts/controllers/available_tasks.js"></script>
+        <script src="scripts/controllers/show_task.js"></script>
+        <script src="scripts/controllers/edit_task.js"></script>
         <!-- endbuild -->
 </body>
 </html>
