--- a/app/views/partials/navbar.html
+++ b/app/views/partials/navbar.html
@@ -4,9 +4,8 @@
       <div class=".logo"></div>
     </a>
     <ul class="nav">
-      <li ng-repeat="item in menu" ng-class="{active: isActive(item.link)}">
-          <a ng-href="{{item.link}}">{{item.title}}</a>
-      </li>
+      <li ng-show="currentUser" ng-class="{active: isActive('/home')}"><a href="/home">Home</a></li>
+      <li ng-show="currentUser" ng-class="{active: isActive('/settings')}"><a href="/settings">Settings</a></li>
       <li ng-hide="currentUser" ng-class="{active: isActive('/login')}"><a href="/login">Login</a></li>
       <li ng-hide="currentUser" ng-class="{active: isActive('/signup')}"><a href="/signup">Sign up</a></li>
       <li ng-show="currentUser" ng-class="{active: isActive('/logout')}"><a href="" ng-click="logout()">Logout</a></li>
