Volunteer can claim task

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -79,6 +79,8 @@
         <script src="scripts/controllers/available_tasks.js"></script>
         <script src="scripts/controllers/show_task.js"></script>
         <script src="scripts/controllers/edit_task.js"></script>
+        <script src="scripts/controllers/posted_tasks.js"></script>
+        <script src="scripts/controllers/claimed_tasks.js"></script>
         <!-- endbuild -->
 </body>
 </html>
