--- a/app/views/partials/tasks/edit.html
+++ b/app/views/partials/tasks/edit.html
@@ -1,7 +1,7 @@
 <div class="row">
   <h1>Edit Task</h1>
   <form ng-submit="updateTask()">
-    <div ng-include="'partials/tasks/_form'"/>
+    <div ng-include="'partials/tasks/_form'"></div>
     <div class="full">
       <input type="submit" class="button button-submit" value="Update Task"/>
     </div>
