--- a/app/views/partials/tasks/new.html
+++ b/app/views/partials/tasks/new.html
@@ -2,7 +2,7 @@
   <h1>New Task</h1>
   <pre>{{task | json}}</pre>
   <form ng-submit="createTask()">
-    <div ng-include="'partials/tasks/_form'"/>
+    <div ng-include="'partials/tasks/_form'"></div>
     <div class="full">
       <input type="submit" class="button button-submit" value="Request Task"/>
     </div>
