Styling, branding, volunteer can complete tasks

--- a/app/styles/_mixins.scss
+++ b/app/styles/_mixins.scss
@@ -4,8 +4,9 @@
 //Primary Colors
 $facebook-blue: #3B5998;
 $twitter-blue: #00aced;
-$blue: #00f;
-$red: #f00;
+$blue: #398899;
+$red: #cc3b37;
+$light-red: #ff857f;
 
 // Greys
 $white: #fff;
