--- a/app/views/partials/navbar.html
+++ b/app/views/partials/navbar.html
@@ -1,7 +1,7 @@
 <header class="site" ng-controller="NavbarCtrl">
   <nav>
     <a href="/">
-      <div class=".logo"></div>
+      <img class="logo" src="/images/hands-attributed.png">
     </a>
     <ul class="nav">
       <li ng-show="currentUser" ng-class="{active: isActive('/home')}"><a href="/home">Home</a></li>
