--- a/app/views/partials/tasks/show.html
+++ b/app/views/partials/tasks/show.html
@@ -1,2 +1,4 @@
-<h1 class="h1">{{task.title}}</h1>
-<p>{{task.details}}</p>
+<div class="row">
+  <h1 class="h1">{{task.title}}</h1>
+  <p>{{task.details}}</p>
+</div>
