--- a/app/styles/header.scss
+++ b/app/styles/header.scss
@@ -1,6 +1,7 @@
 @import "bourbon";
 @import "neat";
 @import "mixins";
+
 .logo {
   margin-top: 0.25em;
   display: inline-block;
@@ -10,6 +11,7 @@ header.site {
   width: 100%;
   height: 100px;
   background: $white;
+  padding-bottom: $medium-gap;
 }
 
 nav {
