--- a/app/views/partials/main.html
+++ b/app/views/partials/main.html
@@ -1,10 +1,10 @@
-<div class="hero cover skyline">
+<div class="hero cover skyline" parallax-background parallax-ratio="0.3">
   <div class="hero content text-center">
     <h1 class="hero h1 bm-xsmall">
-      People need help 
+      Help for Good
     </h1>
     <h2 class="hero h2 bm-small">
-      Give and ask for help to make your community better
+      See delivery and other tasks posted by non-profits, help them help.
     </h2>
     <div class="hero buttons">
       <button class="hero button" ng-click="go('/signup')">Give a hand</button>
@@ -19,7 +19,7 @@
       <p class="marketing copy">
         Whether it’s delivering food
         for the homeless or picking up
-        donations. <span class='faded-blue'>We’ll help you help</span>
+        donations. Hands connects non-profits organizations with the people who want to give back. <span class='faded-blue'>We’ll help you help</span>
       </p>
     </div>
     <div class="figure car">
@@ -27,7 +27,7 @@
     </div>
   </div>
 </div>
-<div class="cover helps">
+<div class="cover helps" parallax-background parallax-ratio="0.3">
 </div>
 <div class="row marketing">
   <div class="md vcenter">
@@ -45,7 +45,7 @@
     </div>
   </div>
 </div>
-<div class="cover llama">
+<div class="cover llama" parallax-background parallax-ratio="0.3">
   <div class="row">
     <div class="full text-right">
       <div class="llama content">
