--- a/app/styles/header.scss
+++ b/app/styles/header.scss
@@ -11,7 +11,7 @@ header.site {
   width: 100%;
   height: 100px;
   background: $white;
-  padding-bottom: $medium-gap;
+  margin-bottom: $small-gap;
 }
 
 nav {
