--- a/app/views/index.html
+++ b/app/views/index.html
@@ -61,6 +61,7 @@
     <script src="bower_components/lodash/dist/lodash.compat.js"></script>
     <script src="bower_components/ngAutocomplete/src/ngAutocomplete.js"></script>
     <script src="bower_components/checklist-model/checklist-model.js"></script>
+    <script src="bower_components/angular-parallax/scripts/angular-parallax.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
