--- a/app/views/partials/tasks/_form.html
+++ b/app/views/partials/tasks/_form.html
@@ -14,7 +14,7 @@
 </div>
 <div class="full">
   <label class="above-field">What does the volunteer need to know?</label>
-  <textarea class="field" type="text" ng-model="task.details"></textarea>
+  <textarea class="field textarea" type="text" ng-model="task.details"></textarea>
   <p class="help-text">
     e.g. When you show up, enter 4545 to get past the gate. Ask for bob. 
   </p>
